# automl

./: .gitignore  README.md  pyproject.toml  test_schema.py
automl/: common.py  memory.py  pipeline.py  transformer.py
automl/schema/: descriptors.py  enums.py  stratagy.py
notebooks/: Linear_model.ipynb  Untitled.ipynb  Untitled_1.ipynb
